--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -18,6 +18,7 @@ h1 {
     display: flex;
     flex-direction: column;
     flex-basis: 30%;
+    min-width:max-content;
     border-radius: 2%;
     box-shadow: 8px 8px 4px #87999F, 0 0 8px #87999F;
     background-color: white;
