--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -1,7 +1,3 @@
-main {
-    
-}
-
 h1 {
     font-size: large;
     font-weight: bold;
@@ -14,11 +10,19 @@ h1 {
     justify-content:center;
 }
 
+@media screen and (max-width: 800px) {
+    .info-input {
+        min-width: 70%;
+    }
+    .stepper-wrapper {
+        min-width: 70%;
+    }
+  }
+
 .info-input {
     display: flex;
     flex-direction: column;
     flex-basis: 30%;
-    min-width:max-content;
     border-radius: 2%;
     box-shadow: 8px 8px 4px #87999F, 0 0 8px #87999F;
     background-color: white;
