--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -23,10 +23,18 @@ h1 {
     display: flex;
     flex-direction: column;
     flex-basis: 30%;
-    min-width: max-content;
     border-radius: 2%;
     box-shadow: 8px 8px 4px #87999F, 0 0 8px #87999F;
     background-color: white;
+}
+
+.info-input form {
+    display: flex;
+    flex-direction: column;
+}
+
+.info-input input::before {
+    content: attr(placeholder);
 }
 
 .info-input input, select {
